# cpp-backtester

./: .gitignore  CMakeLists.txt  README.md  architecture.md
core/: CMakeLists.txt
core/common/: marketevent.hpp
core/data/: dataloader.cpp  dataloader.hpp
core/lob/: book.cpp  book.hpp  limit.hpp  order.hpp
data/: preview.csv
engine/: CMakeLists.txt
engine/clock/: clock.cpp  clock.hpp
tests/: CMakeLists.txt  test_clock.cpp  test_dataloader.cpp
